--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>About Me</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
   <body>
-    <h1>MY name is naveen varshney</h1>
+    <div class="container">
+      <blockquote>
+        <p>About Me</p>
+        <span>Hey i am tech geek want to solve worlds problems by technology also insterested in machine learning.</span>
+      </blockquote>
+    </div>
 
   </body>
 </html>
