add more features

--- a/index.html
+++ b/index.html
@@ -2,16 +2,85 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>About Me</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Naveen Varshney</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
-      <blockquote>
-        <p>About Me</p>
-        <span>Hey i am tech geek want to solve worlds problems by technology also insterested in machine learning.</span>
-      </blockquote>
+      <div class="row">
+        <nav class="navbar navbar-default">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="https://naveen-varshney.github.io/">Naveen</a>
+          </div>
+          <ul class="nav navbar-nav pull-right">
+            <li class="active"><a href="#">Projects</a></li>
+            <li><a href="#">Articles</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="row">
+        <blockquote>
+          <p>
+            Hey! I am tech geek want to solve world problem by technology and curious about how machine learning change people life.
+          </p>
+        </blockquote>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-12">
+          <h4>Work Experience</h4>
+          <div class="panel panel-default">
+            <div class="panel-heading">NewgenaApps - Lukhnow</div>
+            <ul class="list">
+              <li class="list-item">Worked on a project that provides Childcare data and online booking for babysitter. </li>
+              <li class="list-item">Worked on a project that provides companies details to enchace productivity and automates sales</li>
+              <li class="list-item">Create a machine learning model for text classification by using Sckit learn library that categories company by their description to avoid filling data manually.</li>
+              <li class="list-item">Create  a chrome extention to override gmail interface. </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-12">
+          <h4>Projects</h4>
+          <div class="card bg-light text-dark margin-5">
+            <div class="card-body">Sentiment Analysis App</div>
+          </div>
+          <div class="card bg-light text-dark margin-5">
+            <div class="card-body">Blog App with Realtime Update</div>
+          </div>
+          <div class="card bg-light text-dark margin-5">
+            <div class="card-body">Chatapp by using Django channels</div>
+          </div>
+          <div class="card bg-light text-dark margin-5">
+            <div class="card-body">Blood Donation Android App</div>
+          </div>
+          <div class="card bg-light text-dark margin-5">
+            <div class="card-body">Api.ai Chatbot</div>
+          </div>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-sm-12 col-md-12">
+          <h4>Articles</h4>
+          <div class="card bg-light text-dark margin-5">
+            <div class="card-body">How I create Sentimental analysis App</div>
+          </div>
+        </div>
+      </div>
     </div>
 
   </body>
+  <style media="screen">
+    .margin-5
+    {
+      margin: 10px;
+      opacity: inherit;
+      box-shadow: 1px 1px 1px 1px #888888;
+    }
+  </style>
 </html>
