--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
   <body>
     <div class="container">
       <div class="row">
-        <nav class="navbar navbar-default">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="https://naveen-varshney.github.io/">Naveen</a>
-          </div>
-          <ul class="nav navbar-nav pull-right">
-            <li class="active"><a href="#">Projects</a></li>
-            <li><a href="#">Articles</a></li>
-          </ul>
+        <nav class="navbar navbar-light bg-light">
+          <a class="navbar-brand" href="#">Naveen Varshney</a>
         </nav>
       </div>
       <div class="row">
         <blockquote>
           <p>
-            Hey! I am tech geek want to solve world problem by technology and curious about how machine learning change people life.
+            Hey! I am tech geek want to solve world problems by tech and curious about how machine learning change people life.
           </p>
         </blockquote>
       </div>
       <div class="row">
+        <h4>Work Experience</h4>
         <div class="col-sm-12 col-md-12">
-          <h4>Work Experience</h4>
           <div class="panel panel-default">
-            <div class="panel-heading">NewgenaApps - Lukhnow</div>
+            <div class="panel-heading"><h4>Wishbook Infoservices- Bangalore</h4></div>
+            <p style="margin-left:5px">My job here is to automates things so that team could be more productive.</p>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-12">
+          <div class="panel panel-default">
+            <div class="panel-heading"> <h4>NewgenaApps - Lukhnow</h4></div>
             <ul class="list">
               <li class="list-item">Worked on a project that provides Childcare data and online booking for babysitter. </li>
               <li class="list-item">Worked on a project that provides companies details to enchace productivity and automates sales</li>
@@ -68,19 +68,22 @@
         <div class="col-sm-12 col-md-12">
           <h4>Articles</h4>
           <div class="card bg-light text-dark margin-5">
-            <div class="card-body">How I create Sentimental analysis App</div>
+            <div class="card-body"><a href="https://medium.com/@naveen.varshney29/how-do-i-create-my-first-sentimental-analysis-web-app-e4886194ce33">
+              How do I Create My First Sentimental Analysis Web App.
+            </a>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
   </body>
-  <style media="screen">
+  <!-- <style media="screen">
     .margin-5
     {
       margin: 10px;
       opacity: inherit;
       box-shadow: 1px 1px 1px 1px #888888;
     }
-  </style>
+  </style> -->
 </html>
